--- a/Makefile.in
+++ b/Makefile.in
@@ -591,7 +591,7 @@ userconf_DATA += \
 endif
 
 $(bin_SCRIPTS_generated): bin/.dirstamp
-$(userconfm2_DATA_generated): bin/.dirstamp
+$(userconfm2_DATA_generated): m2/.dirstamp
 $(xdgconfighomeemacs_DATA_generated): emacs/.dirstamp
 $(xdgconfighomeemacssitelisp_DATA_generated): emacs/site-lisp/.dirstamp
 $(xdgconfighomeemacssitelispcalc_DATA_generated): emacs/site-lisp/calc/.dirstamp
