--- a/Makefile.in
+++ b/Makefile.in
@@ -700,11 +700,12 @@ endef
 $(call EMACS_PACKAGE,gnu,avy,0.5.0)
 $(call EMACS_PACKAGE,gnu,company,0.9.13)
 $(call EMACS_PACKAGE,gnu,dash,2.19.1)
-$(call EMACS_PACKAGE,gnu,eglot,1.8)
+$(call EMACS_PACKAGE,melpa,eglot,20220612.1004)
 $(call EMACS_PACKAGE,gnu,json-mode,0.2)
 $(call EMACS_PACKAGE,gnu,sed-mode,1.0)
 $(call EMACS_PACKAGE,gnu,sql-indent,1.6)
 $(call EMACS_PACKAGE,melpa,docker-tramp,20220219.420)
+$(call EMACS_PACKAGE,melpa,gxref,20170411.1753)
 $(call EMACS_PACKAGE,melpa,smtpmail-multi,20160218.2349)
 $(call EMACS_PACKAGE,nongnu,git-commit,3.3.0)
 $(call EMACS_PACKAGE,nongnu,go-mode,1.6.0)
