Set some gradle properties

--- a/gradle/gradle.properties
+++ b/gradle/gradle.properties
@@ -7,3 +7,5 @@ org.gradle.warning.mode=all
 org.gradle.priority=low
 org.gradle.parallel=true
 org.gradle.console=plain
+org.gradle.logging.level=warn
+java.awt.headless=true
